<resources>
    <string name="app_name">Scoliocare</string>
    <string name="arrow_left"><![CDATA[<—]]></string>
    <string name="arrow_right"><![CDATA[—>]]></string>
    <string name="sunday_label">SUN</string>
    <string name="monday_label">MON</string>
    <string name="tuesday_label">TUE</string>
    <string name="wednesday_label">WED</string>
    <string name="thursday_label">THU</string>
    <string name="friday_label">FRI</string>
    <string name="saturday_label">SAT</string>
</resources>